fix(safari-fix): fixed some bugs on iphone

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "./_variables";
 
 * {
+  margin: 0;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
@@ -17,6 +18,10 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
+}
+
+input {
+  -webkit-user-select: text;
 }
 
 .indicator-container {
